--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@ p {
   font-weight: bolder;
   font-size: x-large;
 }
+#dp {
+  border-radius: 60%;
+  margin-left: 6%;
+  height: 344px;
+}
 .me {
   display: flex;
   justify-content: stretch;
